--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </div>
 <div class="portfolio-item">
     
-<div class="portfolio-image"><span style="opacity: 20;" class="portfolio-image-placeholder"><a href="#"></a><img src="/imges/لقطة شاشة 2026-02-18 191354.png" alt="" ></span></div>
+<div class="portfolio-image"><span style="opacity: 20;" class="portfolio-image-placeholder"><a href="#"></a><img src="https://saudmado.github.io/myproject2/" alt="" ></span></div>
 <div class="portfolio-content">
 <p class="portfolio-category">Landing Page</p>
 <h3 class="portfolio-title">صفحة هبوط لتطبيق موبايل</h3>
@@ -179,4 +179,5 @@ const menuToggle=document.getElementById('menuToggle');const navLinks=document.g
 </script>
 </body>
 </html>
+
 
