--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </div>
 <div class="portfolio-grid">
 <div class="portfolio-item">
-<div class="portfolio-image"><span style="opacity: 20;" class="portfolio-image-placeholder" ><img  src="/imges/لقطة شاشة 2026-02-18 231110.png" alt=" " ></span></div>
+<div class="portfolio-image"><span style="opacity: 20;" class="portfolio-image-placeholder" ><img  src="pro3.pug" alt=" " ></span></div>
 <div class="portfolio-content">
 <p class="portfolio-category">E-commerce Interface</p>
 <h3 class="portfolio-title">واجهة متجر إلكتروني</h3>
@@ -69,7 +69,7 @@
 </div>
 <div class="portfolio-item">
     
-<div class="portfolio-image"><span style="opacity: 20;" class="portfolio-image-placeholder"><a href="#"></a><img src="https://saudmado.github.io/myproject2/" alt="" ></span></div>
+<div class="portfolio-image"><span style="opacity: 20;" class="portfolio-image-placeholder"><a href="#"></a><img src="pro1.pug" alt="" ></span></div>
 <div class="portfolio-content">
 <p class="portfolio-category">Landing Page</p>
 <h3 class="portfolio-title">صفحة هبوط لتطبيق موبايل</h3>
@@ -83,7 +83,7 @@
 </div>
 </div>
 <div class="portfolio-item">
-<div class="portfolio-image"><span style="opacity: 20;" class="portfolio-image-placeholder" ><img src="/imges/لقطة شاشة 2026-02-18 190425.png" alt="" ></span></div>
+<div class="portfolio-image"><span style="opacity: 20;" class="portfolio-image-placeholder" ><img src=pro3.png" alt="" ></span></div>
 <div class="portfolio-content">
 <p class="portfolio-category">Portfolio Website</p>
 <h3 class="portfolio-title">موقع بورتفوليو لمصمم</h3>
@@ -179,5 +179,6 @@ const menuToggle=document.getElementById('menuToggle');const navLinks=document.g
 </script>
 </body>
 </html>
+
 
 
