--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </div>
 <div class="portfolio-grid">
 <div class="portfolio-item">
-<div class="portfolio-image"><span style="opacity: 20;" class="portfolio-image-placeholder" ><img  src="pro3.pug" alt=" " ></span></div>
+<div class="portfolio-image"><span style="opacity: 20;" class="portfolio-image-placeholder" ><img  src="pro3.png" alt=" " ></span></div>
 <div class="portfolio-content">
 <p class="portfolio-category">E-commerce Interface</p>
 <h3 class="portfolio-title">واجهة متجر إلكتروني</h3>
@@ -69,7 +69,7 @@
 </div>
 <div class="portfolio-item">
     
-<div class="portfolio-image"><span style="opacity: 20;" class="portfolio-image-placeholder"><a href="#"></a><img src="pro1.pug" alt="" ></span></div>
+<div class="portfolio-image"><span style="opacity: 20;" class="portfolio-image-placeholder"><a href="#"></a><img src="pro1.png" alt="" ></span></div>
 <div class="portfolio-content">
 <p class="portfolio-category">Landing Page</p>
 <h3 class="portfolio-title">صفحة هبوط لتطبيق موبايل</h3>
@@ -179,6 +179,7 @@ const menuToggle=document.getElementById('menuToggle');const navLinks=document.g
 </script>
 </body>
 </html>
+
 
 
 
