--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 </div>
 </div>
 <div class="portfolio-item">
-<div class="portfolio-image"><span style="opacity: 20;" class="portfolio-image-placeholder" ><img src=pro2.png" alt="" ></span></div>
+<div class="portfolio-image"><span style="opacity: 20;" class="portfolio-image-placeholder" ><img src="pro2.png" alt="" ></span></div>
 <div class="portfolio-content">
 <p class="portfolio-category">Portfolio Website</p>
 <h3 class="portfolio-title">موقع بورتفوليو لمصمم</h3>
@@ -179,6 +179,7 @@ const menuToggle=document.getElementById('menuToggle');const navLinks=document.g
 </script>
 </body>
 </html>
+
 
 
 
