--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <span class="tag">Vue.js</span>
 <span class="tag">Vuex</span>
 <span class="tag">SASS</span>
-<span class="tag"> <a href="#home">visit Website</a></span>
+<span class="tag"> <a href=" https://saudmado.github.io/my.nova-store/">visit Website</a></span>
 </div>
 </div>
 </div>
@@ -179,6 +179,7 @@ const menuToggle=document.getElementById('menuToggle');const navLinks=document.g
 </script>
 </body>
 </html>
+
 
 
 
