Fix HTML structure and restore missing elements

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <span class="tag">JavaScript</span>
 <span class="tag">CSS Grid</span>
 <span class="tag">Lightbox</span>
-<span class="tag"> <a href="#home">visit Website</a></span>
+<span class="tag"> <a href=" https://saudmado.github.io/myproject2/">visit Website</a></span>
 </div>
 </div>
 </div>
@@ -179,6 +179,7 @@ const menuToggle=document.getElementById('menuToggle');const navLinks=document.g
 </script>
 </body>
 </html>
+
 
 
 
