Restore complete HTML structure for portfolio page
Restored the complete HTML structure and styles for the frontend developer portfolio page, including navigation, hero section, portfolio items, services, contact information, and footer.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <span class="tag">Vue.js</span>
 <span class="tag">Vuex</span>
 <span class="tag">SASS</span>
-<span class="tag"> <a href=" https://saudmado.github.io/my.nova-store/">visit Website</a></span>
+<span class="tag"> <a href="https://saudmado.github.io/my.nova-store/">visit Website</a></span>
 </div>
 </div>
 </div>
@@ -78,7 +78,7 @@
 <span class="tag">HTML5</span>
 <span class="tag">CSS3</span>
 <span class="tag">Animations</span>
-<span class="tag"> <a href="#home">visit Website</a></span>
+<span class="tag"> <a href="https://saudmado.github.io/my.project3/">visit Website</a></span>
 </div>
 </div>
 </div>
@@ -92,7 +92,7 @@
 <span class="tag">JavaScript</span>
 <span class="tag">CSS Grid</span>
 <span class="tag">Lightbox</span>
-<span class="tag"> <a href=" https://saudmado.github.io/myproject2/">visit Website</a></span>
+<span class="tag"> <a href="https://saudmado.github.io/myproject2/">visit Website</a></span>
 </div>
 </div>
 </div>
@@ -179,6 +179,7 @@ const menuToggle=document.getElementById('menuToggle');const navLinks=document.g
 </script>
 </body>
 </html>
+
 
 
 
